<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <android.widget.Button
        android:id="@+id/btnBack"
        android:layout_width="27dp"
        android:layout_height="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/arrowleft">
    </android.widget.Button>

    <TextView
        android:id="@+id/tvMasuk"
        android:layout_below="@+id/btnBack"
        android:fontFamily="@font/mmbold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDescLogin2"
        android:layout_below="@id/tvMasuk"
        android:text="@string/silahkan_masuk_dengan_nomor_hp_mu_yang_terdaftar"
        android:fontFamily="@font/mmregular"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNomorHp"
        android:layout_below="@id/tvDescLogin2"
        android:text="@string/nomor_hp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/mmbold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNomorHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNomorHp"
        android:fontFamily="@font/mmregular"
        android:hint="@string/_62"
        android:inputType="number"
        android:maxLength="12" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNomorHP"
        android:text="@string/ada_kendala_dengan_nomor_hp_mu"
        android:textColor="@color/dasar" />

    <android.widget.Button
        android:id="@+id/btnLanjut"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/custom_box"
        android:fontFamily="@font/mmbold"
        android:text="Masuk"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />

</RelativeLayout>