<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".otpActivity">

    <android.widget.Button
        android:id="@+id/btnBack2"
        android:layout_width="27dp"
        android:layout_height="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/arrowleft">
    </android.widget.Button>

    <TextView
        android:id="@+id/tvOTPsend"
        android:layout_below="@+id/btnBack2"
        android:fontFamily="@font/mmbold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/desc_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescOTP"
        android:layout_below="@id/tvOTPsend"
        android:text="@string/otp_desc"
        android:fontFamily="@font/mmregular"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvGetNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescOTP"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/mmbold"
        android:text="@string/getNumber_null"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomorHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGetNumber"
        android:fontFamily="@font/mmregular"
        android:hint="@string/hint"
        android:inputType="number"
        android:maxLength="4" />

    <android.widget.Button
        android:id="@+id/btnNextHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/custom_box"
        android:fontFamily="@font/mmbold"
        android:text="Masuk"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />

</RelativeLayout>